--- a/App/GCodePanel/GCodePanel.ui
+++ b/App/GCodePanel/GCodePanel.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>597</width>
+    <width>648</width>
     <height>399</height>
    </rect>
   </property>
@@ -14,19 +14,6 @@
    <string>Form</string>
   </property>
   <layout class="QGridLayout" name="gridLayout">
-   <item row="0" column="1">
-    <widget class="QPushButton" name="pb_loadfile">
-     <property name="sizePolicy">
-      <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
-       <horstretch>0</horstretch>
-       <verstretch>0</verstretch>
-      </sizepolicy>
-     </property>
-     <property name="text">
-      <string>LoadFile</string>
-     </property>
-    </widget>
-   </item>
    <item row="0" column="2" rowspan="2">
     <widget class="QGroupBox" name="groupBox_edit">
      <property name="title">
@@ -146,6 +133,119 @@
         </property>
         <property name="text">
          <string>Cancel</string>
+        </property>
+       </widget>
+      </item>
+     </layout>
+    </widget>
+   </item>
+   <item row="1" column="0" colspan="2">
+    <widget class="QWidget" name="widget_editor" native="true">
+     <property name="minimumSize">
+      <size>
+       <width>250</width>
+       <height>350</height>
+      </size>
+     </property>
+    </widget>
+   </item>
+   <item row="0" column="4" rowspan="2">
+    <widget class="QGroupBox" name="groupBox_machining_2">
+     <property name="title">
+      <string>Info</string>
+     </property>
+     <layout class="QVBoxLayout" name="verticalLayout_4">
+      <item>
+       <widget class="QLabel" name="label">
+        <property name="text">
+         <string>当前Node</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QLabel" name="lb_curr_node">
+        <property name="text">
+         <string>-222</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QLabel" name="label_2">
+        <property name="text">
+         <string>总Node</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QLabel" name="lb_total_node">
+        <property name="text">
+         <string>-222</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QLabel" name="label_3">
+        <property name="text">
+         <string>当前用时</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QLabel" name="lb_curr_elapsed">
+        <property name="text">
+         <string>-222</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QLabel" name="label_4">
+        <property name="text">
+         <string>总用时</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QLabel" name="lb_total_elapsed">
+        <property name="text">
+         <string>-222</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <spacer name="verticalSpacer_4">
+        <property name="orientation">
+         <enum>Qt::Vertical</enum>
+        </property>
+        <property name="sizeHint" stdset="0">
+         <size>
+          <width>20</width>
+          <height>134</height>
+         </size>
+        </property>
+       </spacer>
+      </item>
+      <item>
+       <widget class="QPushButton" name="pb_generate_time_report">
+        <property name="sizePolicy">
+         <sizepolicy hsizetype="Minimum" vsizetype="Preferred">
+          <horstretch>0</horstretch>
+          <verstretch>0</verstretch>
+         </sizepolicy>
+        </property>
+        <property name="minimumSize">
+         <size>
+          <width>50</width>
+          <height>40</height>
+         </size>
+        </property>
+        <property name="maximumSize">
+         <size>
+          <width>100</width>
+          <height>16777215</height>
+         </size>
+        </property>
+        <property name="text">
+         <string>生成报告</string>
         </property>
        </widget>
       </item>
@@ -324,116 +424,96 @@
      </layout>
     </widget>
    </item>
-   <item row="0" column="0">
-    <widget class="QLineEdit" name="le_current_file"/>
-   </item>
-   <item row="1" column="0" colspan="2">
-    <widget class="QWidget" name="widget_editor" native="true">
-     <property name="minimumSize">
-      <size>
-       <width>250</width>
-       <height>350</height>
-      </size>
+   <item row="0" column="1">
+    <widget class="QPushButton" name="pb_loadfile">
+     <property name="sizePolicy">
+      <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+       <horstretch>0</horstretch>
+       <verstretch>0</verstretch>
+      </sizepolicy>
+     </property>
+     <property name="text">
+      <string>LoadFile</string>
      </property>
     </widget>
    </item>
-   <item row="0" column="4" rowspan="2">
-    <widget class="QGroupBox" name="groupBox_machining_2">
+   <item row="0" column="0">
+    <widget class="QLineEdit" name="le_current_file"/>
+   </item>
+   <item row="0" column="5" rowspan="2">
+    <widget class="QGroupBox" name="groupBox">
      <property name="title">
-      <string>Info</string>
+      <string>speed</string>
      </property>
-     <layout class="QVBoxLayout" name="verticalLayout_4">
-      <item>
-       <widget class="QLabel" name="label">
+     <layout class="QGridLayout" name="gridLayout_2">
+      <item row="0" column="0">
+       <widget class="QLabel" name="label_5">
         <property name="text">
-         <string>当前Node</string>
+         <string>g00</string>
         </property>
        </widget>
       </item>
-      <item>
-       <widget class="QLabel" name="lb_curr_node">
+      <item row="0" column="1">
+       <widget class="QLabel" name="label_6">
         <property name="text">
-         <string>-222</string>
+         <string>g01</string>
         </property>
        </widget>
       </item>
-      <item>
-       <widget class="QLabel" name="label_2">
-        <property name="text">
-         <string>总Node</string>
+      <item row="1" column="0">
+       <widget class="QSlider" name="verticalSlider_g00speed">
+        <property name="minimum">
+         <number>1</number>
         </property>
-       </widget>
-      </item>
-      <item>
-       <widget class="QLabel" name="lb_total_node">
-        <property name="text">
-         <string>-222</string>
+        <property name="maximum">
+         <number>20</number>
         </property>
-       </widget>
-      </item>
-      <item>
-       <widget class="QLabel" name="label_3">
-        <property name="text">
-         <string>当前用时</string>
+        <property name="pageStep">
+         <number>2</number>
         </property>
-       </widget>
-      </item>
-      <item>
-       <widget class="QLabel" name="lb_curr_elapsed">
-        <property name="text">
-         <string>-222</string>
+        <property name="value">
+         <number>10</number>
         </property>
-       </widget>
-      </item>
-      <item>
-       <widget class="QLabel" name="label_4">
-        <property name="text">
-         <string>总用时</string>
-        </property>
-       </widget>
-      </item>
-      <item>
-       <widget class="QLabel" name="lb_total_elapsed">
-        <property name="text">
-         <string>-222</string>
-        </property>
-       </widget>
-      </item>
-      <item>
-       <spacer name="verticalSpacer_4">
         <property name="orientation">
          <enum>Qt::Vertical</enum>
         </property>
-        <property name="sizeHint" stdset="0">
-         <size>
-          <width>20</width>
-          <height>134</height>
-         </size>
+        <property name="tickPosition">
+         <enum>QSlider::TicksAbove</enum>
         </property>
-       </spacer>
+       </widget>
       </item>
-      <item>
-       <widget class="QPushButton" name="pb_generate_time_report">
-        <property name="sizePolicy">
-         <sizepolicy hsizetype="Minimum" vsizetype="Preferred">
-          <horstretch>0</horstretch>
-          <verstretch>0</verstretch>
-         </sizepolicy>
+      <item row="1" column="1">
+       <widget class="QSlider" name="verticalSlider_g01speed">
+        <property name="minimum">
+         <number>-20</number>
         </property>
-        <property name="minimumSize">
-         <size>
-          <width>50</width>
-          <height>40</height>
-         </size>
+        <property name="maximum">
+         <number>30</number>
         </property>
-        <property name="maximumSize">
-         <size>
-          <width>100</width>
-          <height>16777215</height>
-         </size>
+        <property name="singleStep">
+         <number>2</number>
         </property>
+        <property name="pageStep">
+         <number>5</number>
+        </property>
+        <property name="value">
+         <number>10</number>
+        </property>
+        <property name="orientation">
+         <enum>Qt::Vertical</enum>
+        </property>
+        <property name="tickPosition">
+         <enum>QSlider::TicksBelow</enum>
+        </property>
+        <property name="tickInterval">
+         <number>1</number>
+        </property>
+       </widget>
+      </item>
+      <item row="2" column="1">
+       <widget class="QLabel" name="lb_curr_g01speed">
         <property name="text">
-         <string>生成报告</string>
+         <string>+1.0</string>
         </property>
        </widget>
       </item>
